
    (In other words, it was missing in 1 of these 4 places where it is
    necessary).

  * Disable obsolete checks in configure.ac and preprocessor checks in code for
    APT_HAS_TRIGGERS, APT_HAS_HOMEPAGE and HAVE_DDTP.

    The support for these functionalities has been present in all involved tools
    since 2007-2008 or earlier, so it is safe to disable the checks and the
    dead code.

- Documentation:

  * Guide/User's Manual:

    * Document Brown colour for downgraded packages in UI (feature implemented
      in the last version)

- Translation updates:

  * Russian by Lev Lamberov (Closes: #769425)

  * Dutch by Frans Spiesschaert (Closes: #800516)


[2015-09-17]
Version 0.7.2

- New features:

  * 'Escape' key cancels input dialogs (search, limit, etc.) (Closes: #493322)

  * Extend "firstchar" grouping policy to optionally use source package names.

    With "firstchar(binary)" or the default "firstchar" it will use binary
    package names (same behaviour as before); while with "firstchar(source)" it
    will use source package names.

    This is useful for example when browsing packages coming from the same
    source package ("source" grouping policy) within large collections
    (examples: all installed packages, all upgradable packages, all packages
    from "main" section), to add an intermediate grouping step.  In this way,
    one can for example emulate the hierarchy of FTPs (try grouping:
    "section(topdir),firstchar(source),source").

  * [curses] Add 'New Source Package View' to Views menu (thanks Thadeu Lima de
    Souza Cascardo, see #497206), with some updates and minor modifications,
    like more complex grouping.

    The menu entry was removed before applying the patch attached to that bug
    report, see comment to the commit: 66adb6c872f7b49279da43601e7d3ff199996c1a

  * [curses] Use Yellow/Brown colour to highlight downgrades (Closes: #584510)

    Previously downgrades were not highlighted, so it was bit confusing/odd and