@@ -96,6 +96,10 @@ Version 0.7.3 UNRELEASED
     since 2007-2008 or earlier, so it is safe to disable the checks and the
     dead code.
 
+  * Add functions to check if packages are installed, automatically installed,
+    if they are virtual, and others.  They can be used later to make other code
+    more consistent, clear and clean.
+
 - Documentation:
 
   * Guide/User's Manual:
